# r2retdec

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE-THIRD-PARTY  Makefile  README.md  r2retdec.py
.github/workflows/: ccpp.yml  r2plugin-ci.yml  radare2.version
cmake/: FindCutter.cmake  FindRadare2.cmake
cutter-plugin/: CMakeLists.txt  R2RetDec.cpp  R2RetDec.h  R2RetDecPlugin.cpp  R2RetDecPlugin.h
doc/doxygen/: doxygen.cfg.in
include/cutter-plugin/: core_plugin.h
include/iaito-plugin/: core_plugin.h
include/r2plugin/: cmd_exec.h  filesystem_wrapper.h  r2cgen.h  r2data.h  r2info.h  r2retdec.h  r2utils.h
include/r2plugin/console/: console.h  data_analysis.h  decompiler.h
llvm_utils/: ctypes.py
r2plugin/: r2info.py  r2plugin.py  retdec_config.py  utils.py
scripts/: run-r2-decompilation.py
src/: AnnotatedCode.c  AnnotatedCode.h  CMakeLists.txt  cmd_exec.cpp  core_plugin.cpp  filesystem_wrapper.h  r2cgen.cpp  r2cgen.h  r2info.cpp  r2info.h  r2utils.cpp  r2utils.h
src/cutter-plugin/: CMakeLists.txt  core_plugin.cpp
src/iaito-plugin/: CMakeLists.txt  core_plugin.cpp
src/r2plugin/: CMakeLists.txt  cmd_exec.cpp  core_plugin.cpp  decompiler-config.h  decompiler-config.json  filesystem_wrapper.h  r2cgen.cpp  r2data.cpp  r2info.cpp  r2retdec.cpp  r2utils.cpp  registration.cpp
src/r2plugin/console/: console.cpp  data_analysis.cpp  decompiler.cpp
support/: CMakeLists.txt
